--- a/index.html
+++ b/index.html
@@ -11,19 +11,17 @@
     <link rel="stylesheet" href="css/all.min.css" />
   </head>
   <body>
-    <header>
-      <img class="hero" src="img/hero.png" alt="" srcset="">
-      <nav>
-        <ul>
-          <li><a href="#Summary">الملخصات والشروحات</a></li>
-          <li><a href="#Schedule">الجدول</a></li>
-          <li><a href="#homework">واجبات</a></li>
-          <li><a href="#Advertisement">الاعلانات</a></li>
-        </ul>
-  
-        <h1><a href="index.html">صف المصطفى</a></h1>
-      </nav>
-    </header>
+    <img class="hero" src="img/hero.png" alt="" srcset="">
+    <nav>
+      <ul>
+        <li><a href="#Summary">الملخصات والشروحات</a></li>
+        <li><a href="#Schedule">الجدول</a></li>
+        <li><a href="#homework">واجبات</a></li>
+        <li><a href="#Advertisement">الاعلانات</a></li>
+      </ul>
+
+      <h1><a href="index.html">صف المصطفى</a></h1>
+    </nav>
 
     <section class="About">
         <div class="container">
@@ -40,7 +38,7 @@
     <section id="Summary" class="Summary">
         <div class="container">
             <h1>ملخصات وشروحات</h1>
-            <iframe width="400" height="225" src="video/1.mp4" frameborder="0"></iframe>
+            <iframe width="400" height="225" src="video/كيفية الدخول على OneDrive1.mp4" frameborder="0"></iframe>
             <a href="#" class="more">More</a>
         </div>
     </section>
